# operator_intent

./: .gitignore  LICENSE  README.md
detect_poi/: CMakeLists.txt  image_list.xml  package.xml  settings.xml
detect_poi/config/: config.json  config.txt
detect_poi/include/: CalculateArucoDistance.h  DetectAruco.h  calculate_aruco_distance.h  detect_aruco.h  node_template.h
detect_poi/launch/: consolidated_aruco_node.launch  husky_gazebo_mi_experiment_2.launch  nodes.launch
detect_poi/ml_models/: goal_inference_5_goals.sav  goal_prediction_model_3_goals.sav  intent_inference_model_3_targets.sav  marker_prediction_model.sav
detect_poi/scripts/: goal_inference.py  goal_inference_5_targets.py  goal_inference_knn.py  goal_inference_tests.py
detect_poi/src/: CalculateArucoDistance.cpp  DetectAruco.cpp  SubscribeAndPublish.cpp  approximate_time.cpp  calculate_aruco_distance.cpp  calculate_aruco_distance_and_angle.cpp  calculate_object_distance_and_angle.cpp  calibrate_camera.cpp  camera_calibration.cpp  consolidated_aruco_node.cpp  depth_node.cpp  detect_aruco.cpp  node_template.cpp  (+5 more)
operator_intent_experiments/: CMakeLists.txt  package.xml
operator_intent_msgs/: CMakeLists.txt  package.xml
operator_intent_msgs/msg/: corner_array.msg  marker.msg  marker_collection.msg  marker_coordinates_with_distance.msg  marker_coordinates_with_distance_collection.msg  marker_locations.msg  operator_intent_inference.msg  operator_intent_inference_knn.msg  pixel_array.msg  pixel_coordinates_with_distance.msg  pixel_coordinates_with_distance_collection.msg  pixel_with_distance.msg
(+47 files in other folders)
